<resources>
    <string name="app_name">Randopic</string>
    <string name="popular">Popular</string>
    <string name="latest">Latest</string>
    <string name="oldest">Oldest</string>
    <string name="random">Random</string>
    <string name="info">Info</string>
    <string name="retry">Retry</string>
    <string name="published_on">Published on:</string>
    <string name="views">Views:</string>
    <string name="downloads">Downloads:</string>
    <string name="camera">Camera:</string>
    <string name="focal_length">Focal length:</string>
    <string name="aperture">Aperture:</string>
    <string name="shutter_speed">Shutter speed:</string>
    <string name="iso">ISO:</string>
    <string name="dimensions">Dimensions:</string>
    <string name="back">Back</string>
</resources>